Fix logo letter spacing

--- a/frontend/src/assets/css/main.css
+++ b/frontend/src/assets/css/main.css
@@ -215,7 +215,7 @@ h6 {
   display: block;
   font-size: 20px;
   font-weight: 700;
-  letter-spacing: 2.5px;
+  letter-spacing: 2px;
   color: #f9d02a;
   text-transform: uppercase;
 }
